# PlanDraw

./: .gitignore  .pre-commit-config.yaml  README.md  commands.txt  compiler.py  dev.bat  executor.py  package-lock.json  package.json  path_generator.py  path_optimizer.py  scenario_analysis.py  scenario_smoke_tests.py  simulator.py  test_optimizer.py
backend/: .editorconfig  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/analysis/: __init__.py  scenario_analysis.py
backend/app/api/: __init__.py  main.py  schemas.py
backend/app/core/: __init__.py  plan_module.py
backend/app/execution/: __init__.py  commands.py  compiler.py  executor.py
backend/app/importers/: __init__.py  dwg_converter.py  dxf_importer.py  plan_importer.py
backend/app/normalization/: __init__.py  normalized_plan.py  plan_normalizer.py
backend/app/pathing/: __init__.py  path_generator.py  path_optimizer.py
backend/app/simulation/: __init__.py  simulator.py
backend/app/utils/: __init__.py  geometry_utils.py  step_size_utils.py
backend/golden_dxfs/: README.md  minimal.dxf
backend/reports/: minimal.json  summary.json
backend/scripts/: verify_dxf_drawability.py
backend/tests/: conftest.py  test_collision_analysis.py  test_dxf_importer.py  test_dxf_layer_inspect.py  test_export.py  test_geometry_utils.py  test_import_dwg_api.py  test_import_dxf_api.py  test_motion_model.py  test_normalized_plan.py  test_path_generator.py  test_path_ordering.py  test_verify_dxf_drawability.py
docs/: ARCHITECTURE.md  AUDIT_REPORT.md  PIPELINE_ANALYSIS.md
(+36 files in other folders)
